// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar component renders an error state 1`] = `<div />`;

exports[`Sidebar component renders correctly 1`] = `
<section
  className="sidebar"
>
  <svg
    className="extra-logo"
  >
    <use
      xlinkHref="/images/app.svg#extra-logo-icon"
    />
  </svg>
  <nav
    className="site-nav"
  >
    <section>
      <h3>
        Collections
      </h3>
      <ul>
        <li>
          <a
            className={undefined}
            href="/collections/1"
            onClick={[Function]}
            style={undefined}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="/images/app.svg#collection-icon"
              />
            </svg>
            something
          </a>
        </li>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="/images/app.svg#add-new-icon"
              />
            </svg>
            Add new
          </a>
        </li>
      </ul>
    </section>
    <section>
      <h3>
        Channels
      </h3>
      <ul>
        <li>
          <a
            className={undefined}
            href="/channels/1"
            onClick={[Function]}
            style={undefined}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="/images/app.svg#twitter-badge-icon"
              />
            </svg>
            something else
          </a>
        </li>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="/images/app.svg#add-new-icon"
              />
            </svg>
            Add new
          </a>
        </li>
      </ul>
    </section>
    <section>
      <h3>
        General
      </h3>
      <ul>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="/images/app.svg#performance-icon"
              />
            </svg>
            Performance
          </a>
        </li>
        <li>
          <a
            href="/account"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="/images/app.svg#account-icon"
              />
            </svg>
            Account
          </a>
        </li>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="/images/app.svg#logout-icon"
              />
            </svg>
            Logout
          </a>
        </li>
      </ul>
    </section>
  </nav>
  <div
    className="gradient-container"
  >
    <div
      className="gradient"
    />
  </div>
</section>
`;

exports[`Sidebar component renders loading state 1`] = `
<section
  className="sidebar"
>
  <svg
    className="extra-logo"
  >
    <use
      xlinkHref="/images/app.svg#extra-logo-icon"
    />
  </svg>
  <nav
    className="site-nav"
  >
    <section>
      <h3>
        Collections
      </h3>
      <ul>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="/images/app.svg#add-new-icon"
              />
            </svg>
            Add new
          </a>
        </li>
      </ul>
    </section>
    <section>
      <h3>
        Channels
      </h3>
      <ul>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="/images/app.svg#add-new-icon"
              />
            </svg>
            Add new
          </a>
        </li>
      </ul>
    </section>
    <section>
      <h3>
        General
      </h3>
      <ul>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="/images/app.svg#performance-icon"
              />
            </svg>
            Performance
          </a>
        </li>
        <li>
          <a
            href="/account"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="/images/app.svg#account-icon"
              />
            </svg>
            Account
          </a>
        </li>
        <li>
          <a
            href="/"
            onClick={[Function]}
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="/images/app.svg#logout-icon"
              />
            </svg>
            Logout
          </a>
        </li>
      </ul>
    </section>
  </nav>
  <div
    className="gradient-container"
  >
    <div
      className="gradient"
    />
  </div>
</section>
`;
